# OpenSprinkler-Firmware

./: .gitignore  CMakeLists.txt  OpenSprinkler.cpp  OpenSprinkler.h  gpio.cpp  main.cpp  program.h  server.cpp  utils.cpp  weather.cpp
